# Ayudame_ROS

./: README.md  prueba_mqtt.py
Control/Codes/: CMakeLists.txt  Enlaces de interes.txt
Control/Codes/CalTalon/: CalTalon.c
Control/DatosArduino/: Lectura.py  Seriaal.py
Control/Lectura de datos Arduino/: Lecutra.py
Control/Motores/: Motores.py  Prueba.c
Control/señas/: handTrackingModule.py  señas_numeros.py
Control/tutoriales/: ADC_PWM.c  CMakeLists.txt
Control/tutoriales/ADC_PWM/: ADC_PWM.c  CMakeLists.txt
Control/tutoriales/CAL_talon/: CMakeLists.txt  leeme
Control/tutoriales/button_test/: CMakeLists.txt  button_test.c
Tesis/: Plantilla Ejemplo.txt  Tesis_Alan.tex
